--- a/RestockList/Info.plist
+++ b/RestockList/Info.plist
@@ -4,7 +4,7 @@
 <dict>
 	<key>BGTaskSchedulerPermittedIdentifiers</key>
 	<array>
-		<string>com.yazujumusa.RestockLIst.refresh</string>
+		<string>com.yazujumusa.RestockList.refresh</string>
 	</array>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
