--- a/RestockList/Info.plist
+++ b/RestockList/Info.plist
@@ -6,6 +6,10 @@
 	<array>
 		<string>com.yazujumusa.RestockList.refresh</string>
 	</array>
+	<key>CFBundleLocalizations</key>
+	<array>
+		<string>ja</string>
+	</array>
 	<key>NSUserActivityTypes</key>
 	<array>
 		<string>ConfigurationIntent</string>
