--- a/RestockList/RestockList.entitlements
+++ b/RestockList/RestockList.entitlements
@@ -6,7 +6,7 @@
 	<true/>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.com.yazujumusa.RestockListWidget</string>
+		<string>group.com.yazujumusa.restock-list</string>
 	</array>
 	<key>com.apple.security.network.client</key>
 	<true/>
